# bases_no_rel

./: .gitignore  pyproject.toml
hadoop/: hadoop_infra.ipynb  hive_infra.ipynb  hive_lab.ipynb  metahive_infra.ipynb  metahive_lab.ipynb
hadoop/.\mount\hive-metastore-db/18/docker/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2840_fsm  2841  pg_internal.init
hadoop/.\mount\hive-metastore-db/18/docker/base/16384/: 1247  1247_fsm  1249  1249_fsm  1249_vm  1259  1259_fsm  16391  16395  16402  16403  16410  16411  16417  16418  16420  16422  16436  16450  16464  16465  16478  16489  16499  16507  16517  16530  16545  16559  16560  16567  16578  16579  16590  16597  16598  16603  16610  16611  16617  (+231 more)
hadoop/.\mount\hive-metastore-db/18/docker/base/5/: 2619  pg_internal.init
hadoop/.\mount\hive-metastore-db/18/docker/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
hadoop/.\mount\hive-metastore-db/18/docker/pg_stat/: pgstat.stat
hadoop/.\mount\hive-metastore-db/18/docker/pg_subtrans/: 0000
spark/: spark_examples.ipynb  spark_infra.ipynb  spark_lab.ipynb
