[project]
name = "non-relational-dbs-labs"
version = "0.1.0"
description = "non-relational-dbs-labs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cassandra-driver>=3.29.3",
    "faker>=39.0.0",
    "faker-commerce>=1.0.4",
    "ipykernel>=7.1.0",
    "ipython-cypher>=0.2.6",
    "ipython-sql>=0.5.0",
    "ipywidgets>=8.1.8",
    "mimesis>=18.0.0",
    "neo4j>=6.0.3",
    "neo4j-driver>=5.28.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "portforward>=0.7.5",
    "prettytable==3.7.0",
    "pure-sasl>=0.6.2",
    "pyasyncore>=1.0.4",
    "pyhive>=0.7.0",
    "pymongo>=4.15.5",
    "pymysql>=1.1.2",
    "pyspark>=4.1.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "sparkmagic>=0.23.0",
    "sqlalchemy>=2.0.45",
    "thrift>=0.22.0",
    "thrift-sasl>=0.4.3",
    "tqdm>=4.67.1",
    "venv-pack>=0.2.0",
]
